Don't lie about our scrollable view, and don't claim to have one if we're not scrollable.  Bug 209807, r+sr=roc